--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shield</title>
-    <link rel="stylesheet" href=style/styleheader.css />
+    <link rel="stylesheet" href=style/style.css>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
-    <header >
+    <header>
       <div class="header">
         <div class="logo">
-         <span class="logo-image"></span> <span class="logo-name"></span>
+          <span class="logo-image"></span> <span class="logo-name"></span>
         </div>
         <nav class="nav">
           <a href="">Home</a>
@@ -20,8 +21,38 @@
           <a href="">Contact Us</a>
           <button type="button">Login</button>
         </nav>
-        
       </div>
     </header>
+
+    <section class="banner">
+      <div class="wrapper">
+        <h1 class="title">Fully Managed Cloud & Web Hosting</h1>
+        <p>
+          Deidcated resources, full root access, & easy scaling. It’s the
+          virtual private server you’ve been cravin
+        </p>
+        <a href="#">View Pricing</a>
+      </div>
+    </section>
+
+    <section class="witedomain">
+      <div class="domain">
+        <div class="input">
+        <h1>Search Your Domain Now</h1>
+        <div class="inputbtn">
+          <input
+            type="text"
+            id="search-domain"
+            minlength="2"
+            maxlength="63"
+            placeholder="Search your domain..."
+          />
+          <button>finde now</button>
+        </div>
+      </div>
+      </div>
+    </section>
+
+    <div style="padding-bottom: 300px;"></div>
   </body>
 </html>
