--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shield</title>
     <link rel="stylesheet" href=style/style.css>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <header>
@@ -36,20 +42,43 @@
     </section>
 
     <section class="witedomain">
-      <div class="domain">
+      <div class="searchdomain">
         <div class="input">
-        <h1>Search Your Domain Now</h1>
-        <div class="inputbtn">
-          <input
-            type="text"
-            id="search-domain"
-            minlength="2"
-            maxlength="63"
-            placeholder="Search your domain..."
-          />
-          <button>finde now</button>
+          <h1>Search Your Domain Now</h1>
+          <div class="inputbtn">
+            <input
+              type="text"
+              id="search-domain"
+              minlength="2"
+              maxlength="63"
+              placeholder="Search your domain..."
+            />
+            <button>finde now</button>
+          </div>
         </div>
-      </div>
+
+        <div class="line"></div>
+
+        <div class="priсedomain">
+          <div class="dom">
+            <span class="namedomain">.com</span> <br> <span class="pricedomain">$10 / month</span>
+          </div>
+          <div class="dom">
+            <span class="namedomain">.co.uk</span> <br> <span class="pricedomain">$30 / month</span>
+          </div>
+          <div class="dom">
+            <span class="namedomain">.shop</span> <br> <span class="pricedomain">$12 / month</span>
+          </div>
+          <div class="dom">
+            <span class="namedomain">.in</span> <br> <span class="pricedomain">$11 / month</span>
+          </div>
+          <div class="dom">
+            <span class="namedomain">.de</span> <br> <span class="pricedomain">$17 / month</span>
+          </div>
+          <div class="dom">
+            <span class="namedomain">.nl</span> <br> <span class="pricedomain">$20 / month</span>
+          </div>
+        </div>
       </div>
     </section>
 
