--- a/index.html
+++ b/index.html
@@ -61,23 +61,83 @@
 
         <div class="priсedomain">
           <div class="dom">
-            <span class="namedomain">.com</span> <br> <span class="pricedomain">$10 / month</span>
+            <span class="namedomain">.com</span> <br />
+            <span class="pricedomain">$10 / month</span>
           </div>
           <div class="dom">
-            <span class="namedomain">.co.uk</span> <br> <span class="pricedomain">$30 / month</span>
+            <span class="namedomain">.co.uk</span> <br />
+            <span class="pricedomain">$30 / month</span>
           </div>
           <div class="dom">
-            <span class="namedomain">.shop</span> <br> <span class="pricedomain">$12 / month</span>
+            <span class="namedomain">.shop</span> <br />
+            <span class="pricedomain">$12 / month</span>
           </div>
           <div class="dom">
-            <span class="namedomain">.in</span> <br> <span class="pricedomain">$11 / month</span>
+            <span class="namedomain">.in</span> <br />
+            <span class="pricedomain">$11 / month</span>
           </div>
           <div class="dom">
-            <span class="namedomain">.de</span> <br> <span class="pricedomain">$17 / month</span>
+            <span class="namedomain">.de</span> <br />
+            <span class="pricedomain">$17 / month</span>
           </div>
           <div class="dom">
-            <span class="namedomain">.nl</span> <br> <span class="pricedomain">$20 / month</span>
+            <span class="namedomain">.nl</span> <br />
+            <span class="pricedomain">$20 / month</span>
           </div>
+        </div>
+      </div>
+    </section>
+    <section class="service">
+      <h2>Our Services</h2>
+
+      <div class="ourservices">
+        <div class="blockservice">
+          <div class="imgweb imgservice"></div>
+          <a href="#" class="nameservices">Shared Web Hosting</a>
+          <p class="description">
+            Vestibulum tristique urna eget odio interdum pellentesque. In
+            sodales venenatis lectus, ac tincidunt quam placerat egestas.
+          </p>
+        </div>
+        <div class="blockservice">
+          <div class="imgvsp"></div>
+          <a href="#" class="nameservices">VPS Hosting</a>
+          <p class="description">
+            Vestibulum tristique urna eget odio interdum pellentesque. In
+            sodales venenatis lectus, ac tincidunt quam placerat egestas.
+          </p>
+        </div>
+        <div class="blockservice">
+          <div class="imgserver"></div>
+          <a href="#" class="nameservices">Dedicated Server</a>
+          <p class="description">
+            Vestibulum tristique urna eget odio interdum pellentesque. In
+            sodales venenatis lectus, ac tincidunt quam placerat egestas.
+          </p>
+        </div>
+        <div class="blockservice">
+          <div class="imgcloud"></div>
+          <a href="#" class="nameservices">Cloud Hosting</a>
+          <p class="description">
+            Vestibulum tristique urna eget odio interdum pellentesque. In
+            sodales venenatis lectus, ac tincidunt quam placerat egestas.
+          </p>
+        </div>
+        <div class="blockservice">
+          <div class="imgdomain"></div>
+          <a href="#" class="nameservices">Domain Names</a>
+          <p class="description">
+            Vestibulum tristique urna eget odio interdum pellentesque. In
+            sodales venenatis lectus, ac tincidunt quam placerat egestas.
+          </p>
+        </div>
+        <div class="blockservice">
+          <div class="imgkeys"></div>
+          <a href="#" class="nameservices">License Keys</a>
+          <p class="description">
+            Vestibulum tristique urna eget odio interdum pellentesque. In
+            sodales venenatis lectus, ac tincidunt quam placerat egestas.
+          </p>
         </div>
       </div>
     </section>
