--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         </div>
       </div>
     </section>
+
     <section class="service">
       <h2>Our Services</h2>
 
@@ -139,6 +140,45 @@
             sodales venenatis lectus, ac tincidunt quam placerat egestas.
           </p>
         </div>
+      </div>
+    </section>
+
+    <section class="whiterecall">
+      <div class="recall">
+        <h2>Word From Our Clients</h2>
+        <div class="recallflex">
+          <div class="recallblock">
+            <p class="comment">
+              Aenean suscipit eu nulla et lacinia. Nulla diam felis, malesuada
+              ut erat quis, mattis dignissim justo.
+            </p>
+            <div class="nameaddress">
+              <span class="firstlastname">James Harly</span>
+              <span class="address">Harly web, USA</span>
+            </div>
+          </div>
+          <div class="recallblock">
+            <p class="comment">
+              Aenean suscipit eu nulla et lacinia. Nulla diam felis, malesuada
+              ut erat quis, mattis dignissim justo.
+            </p>
+            <div class="nameaddress">
+              <span class="firstlastname">James Harly</span>
+              <span class="address">Harly web, USA</span>
+            </div>
+          </div>
+          <div class="recallblock">
+            <p class="comment">
+              Aenean suscipit eu nulla et lacinia. Nulla diam felis, malesuada
+              ut erat quis, mattis dignissim justo.
+            </p>
+            <div class="nameaddress">
+              <span class="firstlastname">James Harly</span>
+              <span class="address">Harly web, USA</span>
+            </div>
+          </div>
+        </div>
+        <div class="imgrectangle"></div>
       </div>
     </section>
 
