add our flexible plan

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
         </div>
         <nav class="nav">
           <a href="">Home</a>
-          <a href="">About Us</a>
-          <a href="">Searvice</a>
+          <a href="#search">Search Your Domain</a>
+          <a href="#service">Searvice</a>
+          <a href="#recall">Recall</a>
+          <a href="#buy">Buy a plan</a>
           <a href="">Contact Us</a>
           <button type="button">Login</button>
         </nav>
@@ -41,7 +43,7 @@
       </div>
     </section>
 
-    <section class="witedomain">
+    <section class="witedomain" id="search">
       <div class="searchdomain">
         <div class="input">
           <h1>Search Your Domain Now</h1>
@@ -88,7 +90,7 @@
       </div>
     </section>
 
-    <section class="service">
+    <section class="service" id="service">
       <h2>Our Services</h2>
 
       <div class="ourservices">
@@ -143,7 +145,7 @@
       </div>
     </section>
 
-    <section class="whiterecall">
+    <section class="whiterecall" id="recall">
       <div class="recall">
         <h2>Word From Our Clients</h2>
         <div class="recallflex">
@@ -182,6 +184,81 @@
       </div>
     </section>
 
-    <div style="padding-bottom: 300px;"></div>
+    <section class="resources">
+      <div class="res">
+        <div class="resblock">
+          <span class="quantity">70K</span> <span class="resname">Shared Web Hosting</span>
+        </div>
+        <div class="resblock">
+          <span class="quantity">100M</span> <span class="resname">VPS Hosting</span>
+        </div>
+        <div class="resblock">
+          <span class="quantity">11K</span> <span class="resname">Dedicated Server</span>
+        </div>
+        <div class="resblock">
+          <span class="quantity">199+</span> <span class="resname">Cloud Hosting</span>
+        </div>
+      </div>
+    </section>
+
+    <section class="witeplan" id="buy">
+      <div class="ourflexplan"> 
+     <h2>Our Flexible Plan</h2>
+      <div class="ourplan">
+       <div class="flexplan">
+         <span class="nameplan">Monthly</span> 
+         <span class="priceplan">$ 199.50</span> 
+         <span class="characteristic"><strong>Host 5</strong> Domain</span> 
+         <span class="characteristic"><strong>2GB NVMe</strong> Storage</span> 
+         <span class="characteristic"><strong>50GB</strong> Bandwidth</span> 
+         <span class="characteristic"><strong>Free</strong> SSL Certificate</span> 
+         <span class="characteristic"><strong>24/7</strong> Support</span> 
+         <span class="characteristic"><strong>2GB NVMe</strong> Storage</span> 
+         <span class="characteristic"><strong>Free</strong> SSL Certificate</span> 
+         <button>Buy Now</button>
+       </div>
+       <div class="flexplan">
+        <span class="nameplan">Quarterly</span> 
+        <span class="priceplan">$ 199.50</span> 
+        <span class="characteristic"><strong>Host 5</strong> Domain</span> 
+        <span class="characteristic"><strong>2GB NVMe</strong> Storage</span> 
+        <span class="characteristic"><strong>50GB</strong> Bandwidth</span> 
+        <span class="characteristic"><strong>Free</strong> SSL Certificate</span> 
+        <span class="characteristic"><strong>24/7</strong> Support</span> 
+        <span class="characteristic"><strong>2GB NVMe</strong> Storage</span> 
+        <span class="characteristic"><strong>Free</strong> SSL Certificate</span> 
+        <button>Buy Now</button>
+      </div>
+      <div class="flexplan">
+        <span class="nameplan">Semi Annually</span> 
+        <span class="priceplan">$ 199.50</span> 
+        <span class="characteristic"><strong>Host 5</strong> Domain</span> 
+        <span class="characteristic"><strong>2GB NVMe</strong> Storage</span> 
+        <span class="characteristic"><strong>50GB</strong> Bandwidth</span> 
+        <span class="characteristic"><strong>Free</strong> SSL Certificate</span> 
+        <span class="characteristic"><strong>24/7</strong> Support</span> 
+        <span class="characteristic"><strong>2GB NVMe</strong> Storage</span> 
+        <span class="characteristic"><strong>Free</strong> SSL Certificate</span> 
+        <button>Buy Now</button>
+      </div>
+      <div class="flexplan">
+        <span class="nameplan">Annually</span> 
+        <span class="priceplan">$ 199.50</span> 
+        <span class="characteristic"><strong>Host 5</strong> Domain</span> 
+        <span class="characteristic"><strong>2GB NVMe</strong> Storage</span> 
+        <span class="characteristic"><strong>50GB</strong> Bandwidth</span> 
+        <span class="characteristic"><strong>Free</strong> SSL Certificate</span> 
+        <span class="characteristic"><strong>24/7</strong> Support</span> 
+        <span class="characteristic"><strong>2GB NVMe</strong> Storage</span> 
+        <span class="characteristic"><strong>Free</strong> SSL Certificate</span> 
+        <button>Buy Now</button>
+      </div>
+      </div>
+    </div>
+    </section>
+
+    
+
+    <div style="padding-bottom: 800px; background-color: brown;"></div>
   </body>
 </html>
