--- a/index.html
+++ b/index.html
@@ -187,78 +187,166 @@
     <section class="resources">
       <div class="res">
         <div class="resblock">
-          <span class="quantity">70K</span> <span class="resname">Shared Web Hosting</span>
+          <span class="quantity">70K</span>
+          <span class="resname">Shared Web Hosting</span>
         </div>
         <div class="resblock">
-          <span class="quantity">100M</span> <span class="resname">VPS Hosting</span>
+          <span class="quantity">100M</span>
+          <span class="resname">VPS Hosting</span>
         </div>
         <div class="resblock">
-          <span class="quantity">11K</span> <span class="resname">Dedicated Server</span>
+          <span class="quantity">11K</span>
+          <span class="resname">Dedicated Server</span>
         </div>
         <div class="resblock">
-          <span class="quantity">199+</span> <span class="resname">Cloud Hosting</span>
+          <span class="quantity">199+</span>
+          <span class="resname">Cloud Hosting</span>
         </div>
       </div>
     </section>
 
     <section class="witeplan" id="buy">
-      <div class="ourflexplan"> 
-     <h2>Our Flexible Plan</h2>
-      <div class="ourplan">
-       <div class="flexplan">
-         <span class="nameplan">Monthly</span> 
-         <span class="priceplan">$ 199.50</span> 
-         <span class="characteristic"><strong>Host 5</strong> Domain</span> 
-         <span class="characteristic"><strong>2GB NVMe</strong> Storage</span> 
-         <span class="characteristic"><strong>50GB</strong> Bandwidth</span> 
-         <span class="characteristic"><strong>Free</strong> SSL Certificate</span> 
-         <span class="characteristic"><strong>24/7</strong> Support</span> 
-         <span class="characteristic"><strong>2GB NVMe</strong> Storage</span> 
-         <span class="characteristic"><strong>Free</strong> SSL Certificate</span> 
-         <button>Buy Now</button>
-       </div>
-       <div class="flexplan">
-        <span class="nameplan">Quarterly</span> 
-        <span class="priceplan">$ 199.50</span> 
-        <span class="characteristic"><strong>Host 5</strong> Domain</span> 
-        <span class="characteristic"><strong>2GB NVMe</strong> Storage</span> 
-        <span class="characteristic"><strong>50GB</strong> Bandwidth</span> 
-        <span class="characteristic"><strong>Free</strong> SSL Certificate</span> 
-        <span class="characteristic"><strong>24/7</strong> Support</span> 
-        <span class="characteristic"><strong>2GB NVMe</strong> Storage</span> 
-        <span class="characteristic"><strong>Free</strong> SSL Certificate</span> 
-        <button>Buy Now</button>
+      <div class="ourflexplan">
+        <h2>Our Flexible Plan</h2>
+        <div class="ourplan">
+          <div class="flexplan">
+            <span class="nameplan">Monthly</span>
+            <span class="priceplan">$ 199.50</span>
+            <span class="characteristic"><strong>Host 5</strong> Domain</span>
+            <span class="characteristic"
+              ><strong>2GB NVMe</strong> Storage</span
+            >
+            <span class="characteristic"><strong>50GB</strong> Bandwidth</span>
+            <span class="characteristic"
+              ><strong>Free</strong> SSL Certificate</span
+            >
+            <span class="characteristic"><strong>24/7</strong> Support</span>
+            <span class="characteristic"
+              ><strong>2GB NVMe</strong> Storage</span
+            >
+            <span class="characteristic"
+              ><strong>Free</strong> SSL Certificate</span
+            >
+            <button>Buy Now</button>
+          </div>
+          <div class="flexplan">
+            <span class="nameplan">Quarterly</span>
+            <span class="priceplan">$ 199.50</span>
+            <span class="characteristic"><strong>Host 5</strong> Domain</span>
+            <span class="characteristic"
+              ><strong>2GB NVMe</strong> Storage</span
+            >
+            <span class="characteristic"><strong>50GB</strong> Bandwidth</span>
+            <span class="characteristic"
+              ><strong>Free</strong> SSL Certificate</span
+            >
+            <span class="characteristic"><strong>24/7</strong> Support</span>
+            <span class="characteristic"
+              ><strong>2GB NVMe</strong> Storage</span
+            >
+            <span class="characteristic"
+              ><strong>Free</strong> SSL Certificate</span
+            >
+            <button>Buy Now</button>
+          </div>
+          <div class="flexplan">
+            <span class="nameplan">Semi Annually</span>
+            <span class="priceplan">$ 199.50</span>
+            <span class="characteristic"><strong>Host 5</strong> Domain</span>
+            <span class="characteristic"
+              ><strong>2GB NVMe</strong> Storage</span
+            >
+            <span class="characteristic"><strong>50GB</strong> Bandwidth</span>
+            <span class="characteristic"
+              ><strong>Free</strong> SSL Certificate</span
+            >
+            <span class="characteristic"><strong>24/7</strong> Support</span>
+            <span class="characteristic"
+              ><strong>2GB NVMe</strong> Storage</span
+            >
+            <span class="characteristic"
+              ><strong>Free</strong> SSL Certificate</span
+            >
+            <button>Buy Now</button>
+          </div>
+          <div class="flexplan">
+            <span class="nameplan">Annually</span>
+            <span class="priceplan">$ 199.50</span>
+            <span class="characteristic"><strong>Host 5</strong> Domain</span>
+            <span class="characteristic"
+              ><strong>2GB NVMe</strong> Storage</span
+            >
+            <span class="characteristic"><strong>50GB</strong> Bandwidth</span>
+            <span class="characteristic"
+              ><strong>Free</strong> SSL Certificate</span
+            >
+            <span class="characteristic"><strong>24/7</strong> Support</span>
+            <span class="characteristic"
+              ><strong>2GB NVMe</strong> Storage</span
+            >
+            <span class="characteristic"
+              ><strong>Free</strong> SSL Certificate</span
+            >
+            <button>Buy Now</button>
+          </div>
+        </div>
       </div>
-      <div class="flexplan">
-        <span class="nameplan">Semi Annually</span> 
-        <span class="priceplan">$ 199.50</span> 
-        <span class="characteristic"><strong>Host 5</strong> Domain</span> 
-        <span class="characteristic"><strong>2GB NVMe</strong> Storage</span> 
-        <span class="characteristic"><strong>50GB</strong> Bandwidth</span> 
-        <span class="characteristic"><strong>Free</strong> SSL Certificate</span> 
-        <span class="characteristic"><strong>24/7</strong> Support</span> 
-        <span class="characteristic"><strong>2GB NVMe</strong> Storage</span> 
-        <span class="characteristic"><strong>Free</strong> SSL Certificate</span> 
-        <button>Buy Now</button>
-      </div>
-      <div class="flexplan">
-        <span class="nameplan">Annually</span> 
-        <span class="priceplan">$ 199.50</span> 
-        <span class="characteristic"><strong>Host 5</strong> Domain</span> 
-        <span class="characteristic"><strong>2GB NVMe</strong> Storage</span> 
-        <span class="characteristic"><strong>50GB</strong> Bandwidth</span> 
-        <span class="characteristic"><strong>Free</strong> SSL Certificate</span> 
-        <span class="characteristic"><strong>24/7</strong> Support</span> 
-        <span class="characteristic"><strong>2GB NVMe</strong> Storage</span> 
-        <span class="characteristic"><strong>Free</strong> SSL Certificate</span> 
-        <button>Buy Now</button>
-      </div>
-      </div>
-    </div>
     </section>
 
-    
+    <footer class="footer">
+      <div class="footertop">
+        <div class="generalfooter">
+          <div class="logoaboutUs">
+            <div class="logo">
+              <span class="logo-image"></span> <span class="logo-name"></span>
+            </div>
+            <p class="aboutUs">Nulla diam felis, malesuada ut erat quis, mattis dignissim justo. Cras cursus, lacus et dignissim volutpat</p>
+          </div>
+          <div class="links">
+            <span>Quickl Links</span>
+            <a href="">Home</a>
+            <a href="#search">Search Your Domain</a>
+            <a href="#service">Searvice</a>
+            <a href="#recall">Recall</a>
+            <a href="#buy">Buy a plan</a>
+            <a href="">Contact Us</a>
+          </div>
+          <div class="linkservice">
+            <span>Services</span>
+            <a href="">Shared Web Hosting</a>
+            <a href="">VPS Hosting</a>
+            <a href="">Dedicated Server</a>
+            <a href="">Cloud Hosting</a>
+            <a href="">Domain Names</a>
+            <a href="">License Keys</a>
+          </div>
+          <div class="contactfollow">
+            <div class="contact">
+              <span>Contact Us</span>
+              <a href="tel: +91 - 99xxx 000xx">+91 - 99xxx 000xx</a>
+              <a href="mailto: shield.info@gmail.com">shield.info@gmail.com</a>
+            </div>
+            <div class="follow">
+              <span>Follow Us</span>
+              <div class="media">
+                <div class="facebook"></div>
+                <div class="twitter"></div>
+                <div class="youtube"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-    <div style="padding-bottom: 800px; background-color: brown;"></div>
+      <div class="footerbotom">
+        <div class="copywriter">
+          <span>© Copyright © Sheild. All Rights Reserved.</span>
+          <span>Privacy Policy | Tearms Condition</span>
+        </div>
+      </div>
+    </footer>
+
+
+    <div style="padding-bottom: 50px; background-color: rgb(255, 255, 255);"></div>
   </body>
 </html>
