--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a href="">Home</a>
           <a href="#search">Search Your Domain</a>
           <a href="#service">Searvice</a>
-          <a href="#recall">Recall</a>
+          <a href="#recall">feedback</a>
           <a href="#buy">Buy a plan</a>
           <a href="">Contact Us</a>
           <button type="button">Login</button>
@@ -307,7 +307,7 @@
             <a href="">Home</a>
             <a href="#search">Search Your Domain</a>
             <a href="#service">Searvice</a>
-            <a href="#recall">Recall</a>
+            <a href="#recall">feedback</a>
             <a href="#buy">Buy a plan</a>
             <a href="">Contact Us</a>
           </div>
