--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
           <span class="logo-image"></span> <span class="logo-name"></span>
         </div>
         <nav class="nav">
-          <a href="">Home</a>
+          <a href="#Home">Home</a>
           <a href="#search">Search Your Domain</a>
           <a href="#service">Searvice</a>
           <a href="#recall">feedback</a>
           <a href="#buy">Buy a plan</a>
-          <a href="">Contact Us</a>
+          <a href="#contact">Contact Us</a>
           <button type="button">Login</button>
         </nav>
       </div>
     </header>
 
-    <section class="banner">
+    <section class="banner" id="Home">
       <div class="wrapper">
         <h1 class="title">Fully Managed Cloud & Web Hosting</h1>
         <p>
@@ -293,7 +293,7 @@
       </div>
     </section>
 
-    <footer class="footer">
+    <footer class="footer" id="contact">
       <div class="footertop">
         <div class="generalfooter">
           <div class="logoaboutUs">
@@ -304,12 +304,12 @@
           </div>
           <div class="links">
             <span>Quickl Links</span>
-            <a href="">Home</a>
+            <a href="#Home">Home</a>
             <a href="#search">Search Your Domain</a>
             <a href="#service">Searvice</a>
             <a href="#recall">feedback</a>
             <a href="#buy">Buy a plan</a>
-            <a href="">Contact Us</a>
+            <a href="#contact">Contact Us</a>
           </div>
           <div class="linkservice">
             <span>Services</span>
